force-app/main/default/objects/Visit_Confirmed__e/Visit_Confirmed__e.object-meta.xml
<CustomObject>
    <label>Visit Confirmed</label>
    <pluralLabel>Visits Confirmed</pluralLabel>
</CustomObject>