force-app/main/default/objects/Visit_Confirmed__e/fields/DateTime__c.field-meta.xml
<CustomField>
    <fullName>DateTime__c</fullName>
    <label>DateTime</label>
    <type>DateTime</type>
</CustomField>