force-app/main/default/objects/Visit_Confirmed__e/fields/Visit_Id__c.field-meta.xml
<CustomField>
    <fullName>Visit_Id__c</fullName>
    <label>Visit Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>